# hemesh

./: .bazelrc  README  WORKSPACE.bazel
cc/container/: BUILD.bazel  map_util.h
cc/container/tests/: map_util_test.cc
cc/file/: BUILD.bazel  file_helper.cc  file_helper.h
cc/geom/: BUILD.bazel  delaunay_predicates.h
cc/geom/tests/: delaunay_predicates_test.cc
cc/hemesh/: BUILD.bazel  convex_hull_2d.h  delaunay_triangulator.h  hemesh.h  hemesh_geometry.h  hemesh_geometry_util.h  hemesh_io_obj.h  hemesh_io_svg.h
cc/hemesh/tests/: convex_hull_2d_collinear_test.cc  convex_hull_2d_test.cc  delaunay_triangulator_test.cc  hemesh_geometry_test.cc  hemesh_io_obj_test.cc  hemesh_io_svg_test.cc
cc/math/: BUILD.bazel  bounding_box.h  math_limits.h  vector.h  vector2.h  vector_impl.h
cc/math/tests/: bounding_box2_test.cc  math_limits_test.cc  vector2_test.cc
docs/: delaunay.html
tools/: BUILD.bazel  convex_hull_2d_cli.cc  delaunay_example.bash  delaunay_triangulator_cli.cc  obj_to_svg_cli.cc  random_points_cli.cc
